maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:23: error: value unary_! is not a member of Unit
  while(!checkGauche){
        ^Escaper:24: error: not found: value random3
     var de = random3()
              ^Escaper:83: warning: enclosing method checkGauche has result type Unit: return value discarded
  return resultat
  ^